@@ -759,6 +759,11 @@ Type=lkd
 #       is a vfd or vkd as they don't have this feature
 Contrast=480
 
+# Some old displays do not have an adjustable backlight but only can
+# switch the backlight on/off. If you experience randomly appearing block
+# characters, try setting this to false. [default: yes; legal: yes, no]
+hasAdjustableBacklight=no
+
 # Set the initial brightness [default: 1000; legal: 0 - 1000]
 Brightness=1000
 # Set the initial off-brightness [default: 0; legal: 0 - 1000]
